
0.9.10 (unreleased)
-------------------

- Droppen von Objekten in einen Channel führt nicht mehr zum JS-Fehler (sondern
  zu einer richtigen Fehlermeldung), bug #4094.
- Horizontales scrollen in der Dateiliste erlaubt, wenn die Tabelle zu breit
  wird.
- Channel haben jetzt <channel> als Root-Tag (bug #4109).
- Relateds werden jetzt bei der Syndizierung mit eingefügt (bug #4106).


0.9.9 (2008-04-14)
------------------

- Veraltete Einträge im Funktions-/Methodencache werden jetzt alle 100 Requests
  entfernt.
- Im Channel werden die Treffer/Hits (today.xml) des jeweiligen Dokuments
  angezeigt (bug #4093).
- Bildergalerie: Layout kann pro Bild eingestellt werden (bug #4048).
- Bildergallerie bei Artikel referenzieren (bug #4052).
- Workflowstatus "Bearbeitet" heißt jetzt "redigiert" (bug #4089).
- Draggen von Dokumenten in den Kalender funktioniert wieder (bug #4096).
- Kalender-Eintrag: Formular übersichtlicher
- Draggen von Elementen aus "Bearbeitete Dokumente" (bug #4095).
- Bearbeite Dokumente: Das zuletzt ausgecheckte Dokument steht jetzt oben (bug
  #4054).
- Verlinkte Objekte: 3-Punkte-Symbol mit Mouse over versehen (bug #4057).
- Verlinkte Objekte: Zusätzlicher Knopf (Pfeil nach rechts) um zum verlinkten
  Objekt zu gelangen (bug #4082).

0.9.8 (2008-04-09)
------------------

- Related konnte nicht mehr in der Lightbox ausgewählt werden
  (ScrollStateRestorer not defined).
- Bug beim Referenzieren von Objekten behoben, z.B. ging ein Image als Related
  nicht, unbekannte Resourcen konnten nicht verlinkt werden (Systemfehler).
- Titel der Workflow-Status-Suchfelder korrigiert (bug #4088).
- Besseres cachen der Datenquellen (in zeit.cms.content.sources).
- WYSIWYG-Editor: Auswählen von Objekten aus dem Clipboard repariert (bug
  #4097).
- Fließtext kann jetzt Bilder beinhalten. Diese sind vom Server per FCKEditor
  Filebrowser auswählbar (bug #4090)
- Text in der Gallery ist jetzt auch per WYSIWYG-Editor bearbeitbar (bug
  #4091).


0.9.7 (2008-04-07)